Memperbaiki syntax pada file 5-Hyperlink-5.html.

--- a/5-Hyperlink/5-Hyperlink-5.html
+++ b/5-Hyperlink/5-Hyperlink-5.html
@@ -44,4 +44,5 @@
     </p>
     <p><a href = "5-Hyperlink-1.html">Kembali ke Belajar HTML Hyperlink 1.</a></p>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</body>
 </html>
